Tooltip z-index issue fixed

--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/css/style.css
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/css/style.css
@@ -762,6 +762,7 @@ input.searchField {
   border: 1px solid #ddd;
   padding: 12px;
   max-width: 200px;
+  z-index: 100;
   -webkit-box-shadow: 0px 0px 2px 2px #e3e3e3;
   -moz-box-shadow: 0px 0px 2px 2px #e3e3e3;
   box-shadow: 0px 0px 2px 2px #e3e3e3;
