--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/less/theme/main.less
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/less/theme/main.less
@@ -254,6 +254,7 @@ input.searchField {
     border: 1px solid #ddd;
     padding:12px;
     max-width: 200px;
+    z-index: 100;
     
     .box-shadow(0px, 0px, 2px, 2px, #e3e3e3);
 }
